Create instance using `getDeclaredConstructor()`